# ShiftTree

./: .env.example  .prettierrc.json  Caddyfile  LICENSE  Makefile  README.md  agenda.md  compose.prod.yaml  compose.yaml
scheduling/: .dockerignore  .env.example  Dockerfile  out.html  pyproject.toml
scheduling/scheduling/: cli.py  main.py  models.py  offsets.py  schedule.py
scheduling/scheduling/html/: __init__.py  index.html.j2
scheduling/tests/: test_offsets.py  test_past_fail.py  test_schedule.py  test_shift_separation.py  test_weighting.py
scheduling/tests/pass_fail/: consecutive_shifts_simple.pass.toml  infeasable_overlapping_suggested_shifts.fail.toml  one_user_multiple_consecutive_shifts.fail.toml  one_user_overlapping_shifts.fail.toml  one_user_per_shift_simple.pass.toml  shifts_too_close.fail.toml  simple_suggested_shifts.pass.toml
tests/: README.md  generate.sh  main.py  pyproject.toml  python-openapi-client.yaml  test_create_account_and_login.py  test_joining_and_kick_members.py  test_shift_creation.py  utils.py
tests/shifttree-api-client/: README.md  pyproject.toml
tests/shifttree-api-client/st/: __init__.py
tests/shifttree-api-client/st/models/: __init__.py  credentials.py  error.py  get_hello_response_200.py  get_schedules_role_item.py  get_shift_tree_code_existing_response_200.py  get_shift_tree_code_generate_response_200.py  post_register_response_201.py  post_schedules_body.py  post_schedules_response_201.py  post_signups_shift_id_body.py  put_shifts_shift_id_body.py  registration_credentials.py  schedule_info_preview.py  schedule_info_preview_role.py  schedule_info_preview_state.py  shift_create_info.py  shift_info.py  signup_info.py  unexpected_error.py  user.py  user_info_preview.py
(+119 files in other folders)
